--- a/app/views/valuator/index.html.erb
+++ b/app/views/valuator/index.html.erb
@@ -2,13 +2,13 @@
 
 <h2>Purpose</h2>
 <p>
-When you have many cryptocurrencies, like bitcoin, xcp, sjcx, etc.., <br>
+When you have many kinds of cryptocurrencies, like bitcoin, xcp, sjcx, etc.., <br>
 and you want to know the total valuation, it bothers you to valuate market price 
 of each currencies and sum them up. <br>
 This application automatically valuates market price, sums them up, and convers the currency you want, <br>
 once you paste cryptocurency addresses list.
 </p>
-<h2>how to work</h2>
+<h2>How to work</h2>
 1.gets balance of each cryptocurencies from https://blockchain.info/q/addressbalance/ <br>
 &nbsp;&nbsp;and http://xcp.blockscan.com/api2?module=address&action=balance&btc_address <br>
 2. converts to btc by https://poloniex.com/public?command=returnTicker <br>
@@ -20,7 +20,7 @@ once you paste cryptocurency addresses list.
 <%= form_for :form  do |f| %>
   <p>
     <%= f.label "currency" %>
-    <%= f.select :currency,@currencies.map{|t| [t,t]},:value=>@currency %>
+    <%= f.select :currency,@currencies.map{|t| [t,t]},:selected=>@currency %>
   </p>
   <p>
     <%= f.label "addresses" %><br>
@@ -60,3 +60,7 @@ once you paste cryptocurency addresses list.
 <td><%=@btcSum%></td>
 <td><%=@currencySum%></td>
 </table>
+<hr>
+donate BTC:18xgGTTzZU9etyBt5wC8gS2tKn5No33jw3 <br><br>
+If you want me to add exchanges, coins,etc... donate first and tweet your requests with your btc address to @storj_jp<br>
+(Your donation never gurantee to meet your requests.)
