--- a/app/views/valuator/index.html.erb
+++ b/app/views/valuator/index.html.erb
@@ -54,5 +54,5 @@
 <h2>Donation</h2>
 18xgGTTzZU9etyBt5wC8gS2tKn5No33jw3(BTC) <br><br>
 If you want me to add exchanges, coins,etc... donate first and tweet your requests to @storj_jp with your btc address. <br>
-(Your donation never gurantee to meet your requests.)
+(Your donation never gurantees to meet your requests.)
 <br>
