--- a/app/views/valuator/index.html.erb
+++ b/app/views/valuator/index.html.erb
@@ -8,7 +8,7 @@
     <%= f.select :currency,@currencies.map{|t| [t,t]},:selected=>@currency,:class=>"form-control" %>
   </p>
   <p class="form-group">
-    <%= f.label "addresses" %><br>
+    <%= f.label "addresses(one address per line)" %><br>
     <%= f.text_area :addresses,:value=>@addresses ,:class=>"form-control",:size=>"10x10"%>
   </p>
  
