add simple format

--- a/app/views/valuator/index.html.erb
+++ b/app/views/valuator/index.html.erb
@@ -47,7 +47,7 @@
 
 <h2>
 Use this 
-<%= link_to "link", "form[addresses]"=>@addresses,"form[currency]"=>@currency%>
+<%= link_to "link", :action=>"simple","form[addresses]"=>@addresses,"form[currency]"=>@currency%>
 next time!
 </h2>
 
